--- a/.github/workflows/react-demo-deploy.yml
+++ b/.github/workflows/react-demo-deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Download a Build Artifact
         uses: actions/download-artifact@v2.0.8
       - run: npm install -g @lhci/cli@0.7.x
-      - run: lhci autorun
+      - run: lhci autorun --collect.staticDistDir
   deploy:
     runs-on: ubuntu-latest
     needs: test
