--- a/.github/workflows/react-demo-deploy.yml
+++ b/.github/workflows/react-demo-deploy.yml
@@ -56,6 +56,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           source: "artifact/*"
+          target: ${{ secrets.TARGET }} 
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           overwrite: true
